--- a/html-test/style.css
+++ b/html-test/style.css
@@ -12,7 +12,8 @@ body {
 
 .container {
   width: 1460px;
-  margin: 0 auto;
+  margin: 0px auto;
+  padding: 0px 16px;
 }
 
 .navbar {
@@ -88,8 +89,71 @@ body {
   height: 20px;
 }
 
-/* Responsive Navbar for Mobile */
-@media (max-width: 768px) {
+.hero {
+  background-image: linear-gradient(to top, #000000c2, #000000c2),
+    url("https://i.ibb.co.com/H4QVwXW/360-F-292569117-IXB16o-P1-A5-U47b-TVRn-Y0-FOXZf-XKYesjn.jpg");
+  width: 100%;
+  height: 90vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.hero__description {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  justify-content: center;
+  height: 80vh;
+}
+
+.hero .tool__tip {
+  width: fit-content;
+  padding: 8px 15px;
+  background-color: #00000090;
+  color: #fff;
+  border-radius: 5px;
+}
+
+.hero .title {
+  font-size: 52px;
+  font-weight: 400;
+  text-transform: capitalize;
+  color: #fff;
+  padding: 10px 0px;
+}
+
+.sub__title {
+  font-size: 20px;
+  margin: 10px 0px;
+  color: #fff;
+}
+
+.banner__button__wrapper {
+  margin-top: 50px;
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+
+.button__container {
+  padding: 12px 25px;
+  border-radius: 8px;
+  font-size: 18px;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.border__button {
+  background-color: transparent;
+  color: white;
+  border: 1px solid #fff;
+}
+
+@media (max-width: 1024px) {
+  .container {
+    width: 100%;
+  }
   .navbar {
     padding: 20px 10px;
     display: flex;
@@ -142,5 +206,26 @@ body {
     font-size: 18px;
     letter-spacing: 8px;
     padding-left: 10px;
+  }
+
+  .hero .title {
+    font-size: 32px;
+  }
+}
+
+/* Responsive Navbar for Mobile */
+@media (max-width: 768px) {
+  .hero {
+    background-position: left;
+    height: 60vh;
+  }
+
+  .hero__description {
+    grid-template-columns: repeat(1, 1fr);
+    height: 50vh;
+  }
+
+  .hero .title {
+    font-size: 28px;
   }
 }
