--- a/html-test/style.css
+++ b/html-test/style.css
@@ -150,6 +150,59 @@ body {
   border: 1px solid #fff;
 }
 
+#productSection {
+  padding: 80px 0px;
+}
+
+.product__container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  margin: 0 auto;
+}
+
+.product {
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  transition: transform 0.3s ease;
+  cursor: pointer;
+}
+
+.product img {
+  width: 100%;
+  height: 300px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.product__details {
+  padding: 10px 20px;
+}
+
+.product__details .title {
+  font-size: 18px;
+  font-weight: 600;
+  color: #333;
+}
+
+.product__details .details {
+  font-size: 16px;
+  margin-top: 15px;
+  color: #333;
+}
+
+.product:hover {
+  transform: scale(1.03);
+}
+
+.section__title {
+  font-size: 38px;
+  text-align: center;
+  font-weight: 600;
+  padding-bottom: 40px;
+}
+
 @media (max-width: 1024px) {
   .container {
     width: 100%;
@@ -211,13 +264,28 @@ body {
   .hero .title {
     font-size: 32px;
   }
+
+  #productSection {
+    padding: 60px 16px;
+  }
+
+  .product__container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .product img {
+    height: 400px;
+  }
 }
 
-/* Responsive Navbar for Mobile */
 @media (max-width: 768px) {
   .hero {
     background-position: left;
     height: 60vh;
+  }
+
+  .hero .title {
+    font-size: 28px;
   }
 
   .hero__description {
@@ -225,7 +293,13 @@ body {
     height: 50vh;
   }
 
-  .hero .title {
-    font-size: 28px;
+  .product__container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 767px) {
+  .product__container {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
