--- a/react-test/src/index.css
+++ b/react-test/src/index.css
@@ -1,5 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "Montserrat";
+  src: local("AirbnbCerealLight"),
+    url("./fonts/Montserrat-Light.ttf") format("truetype");
+}
+
+body {
+  font-family: "Montserrat";
+}
